<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/noteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/note_title_hint" />
    
    <Spinner
      android:id="@+id/category"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:prompt="@string/categoryPrompt" />

    <Spinner
      android:id="@+id/assignedUser"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:prompt="@string/assignedUserPrompt" />
    
    <EditText
        android:id="@+id/noteContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/note_content_hint" />
    
    <Button
        android:id="@+id/createNote"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/create_button" />
</LinearLayout>