<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
      	xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:orientation="vertical"
	    android:background="@drawable/bg_2"
	   	tools:context=".RegisterActivity">
 
        <ImageView android:src="@drawable/logo"
            android:contentDescription="@string/logoContentDesc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dip"
            android:layout_marginStart="10dip"/>

         <EditText
	        android:id="@+id/usernameField"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textColor="#ffffff"
	        android:textColorHint="#ffffff"
		    android:layout_marginTop="10dp"
	        android:ems="10"
	        android:hint="@string/username_hint" >
	        <requestFocus />
	    </EditText>

		<EditText
	        android:id="@+id/emailField"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textColor="#ffffff"
	        android:textColorHint="#ffffff"
	        android:layout_marginTop="5dp"
	        android:ems="10"
	        android:inputType="textEmailAddress"
	        android:hint="@string/email_hint" />
		
         <EditText 
          	android:id="@+id/passwordField"
          	android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:layout_marginTop="5dip"
            android:ems="10"
	        android:hint="@string/password_hint"
	        android:inputType="textPassword"/>
         
         <EditText 
          	android:id="@+id/repasswordField"
          	android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:layout_marginTop="5dip"
            android:ems="10"
	        android:hint="@string/repassword_hint"
	        android:inputType="textPassword"/>

         <ImageButton android:id="@+id/btnRegister"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:layout_marginTop="15dp"
  			android:layout_marginBottom="30dp"
            android:src="@drawable/register" />
 
</LinearLayout>

