<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_2"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/groupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/group_name_hint" >
        <requestFocus />
    </EditText>

       <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
    	
        <EditText
            android:id="@+id/userName"
            android:layout_width="0dp"               
        	android:layout_weight="5" 
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/user_name_hint">
        </EditText>

        <ImageButton
            android:id="@+id/createUserBtn"
            android:layout_width="0dp"               
        	android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_new" />
        
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp" 
        android:layout_weight="5">
    </ListView>
    
    <Button
        android:id="@+id/createGroup"
        android:layout_width="100dp"
        android:layout_height="0dp" 
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/create_button" />
</LinearLayout>