<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
      	xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@drawable/bg_2"
        android:orientation="vertical"
        tools:context=".LoginActivity">
 
        <ImageView android:src="@drawable/logo"
            android:contentDescription="@string/logoContentDesc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dip"
            android:layout_marginStart="10dip"/>

       	<EditText
	        android:id="@+id/usernameField"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
		    android:layout_marginTop="10dp"
		    android:textColor="#ffffff"
		    android:textColorHint="#ffffff"
	        android:ems="10"
	        android:hint="@string/username_hint" >
	        <requestFocus />
	    </EditText>
 
	    <EditText
	        android:id="@+id/passwordField"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
		    android:layout_marginTop="5dp"
		    android:textColor="#ffffff"
		    android:textColorHint="#ffffff"
	        android:ems="10"
	        android:hint="@string/password_hint"
	        android:inputType="textPassword" />
	    
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="15dp"
		    android:layout_marginBottom="40dp"
		    android:orientation="horizontal" >
	        
	        <ImageButton
		        android:id="@+id/loginButton"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="60dp"
		        android:scaleType="fitXY"
		        android:layout_marginRight="10dp"
		        android:layout_marginLeft="10dp"
		        android:src="@drawable/login" />
	 
		    <ImageButton
		        android:id="@+id/signUpText"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="60dp"
		        android:scaleType="fitXY"
		        android:layout_marginRight="10dp"
		        android:layout_marginLeft="10dp"
		        android:src="@drawable/signup" />
        
   		</LinearLayout>
   		
</LinearLayout>